src/test/deca/syntax/valid/if-medium.deca
// Description:
//
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2025
{
    int x = 10;
    if (x > 5) {
        println(x);
    }
}
