src/test/deca/syntax/invalid/extra-comma.deca
// Description:
//    Programme avec une virgule incorrecte.
//
// Résultats:
//    Ligne 5 : Erreur de syntaxe.
//
// Historique:
//    créé le 01/01/2025

{
    println("Texte",);
}
